<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Yaoha</string>
    <string name="start">Start</string>
    <string name="osm_username">Username</string>
    <string name="osm_password">Password</string>
    <string name="button_osm_login">Login</string>
    <string name="button_osm_signup">Sign up</string>
    <string name="checkbox_save_password">Save Password</string>
    <string name="osm_settings">OSM Settings</string>
    <string name="gasStation">gas</string>
    <string name="add_favorite">+</string>
    <string name="node_edit_monday_short">Mo</string>
    <string name="node_edit_tuesday_short">Tu</string>
    <string name="node_edit_wednesday_short">We</string>
    <string name="node_edit_thursday_short">Th</string>
    <string name="node_edit_friday_short">Fr</string>
    <string name="node_edit_saturday_short">Sa</string>
    <string name="node_edit_sunday_short">Su</string>
    <string name="node_edit_add_hours">Add hours</string>
    <string name="node_edit_choose_days">Choose days</string>
    <string name="node_edit_start_time">Start time</string>
    <string name="node_edit_end_time">End time</string>
    <string name="node_edit_open_end">Open end</string>
    <string name="node_edit_upload_node">Upload changes</string>
    <string name="node_edit_back">Back</string>
    <string name="node_edit_cancel">Cancel</string>
    <string name="node_edit_next">Next</string>
    <string name="node_edit_finish">Finish</string>
    <string name="node_edit_remove_this">Remove this</string>
    <string name="node_edit_remove_all">Remove all</string>
    <string name="emptyString"></string>
    <string name="enableEditmode">Toggle Editmode</string>
    <string name="set_osm">Set OSM-Account</string>
    <string name="osm_token">Your Token:</string>
    <string name="osm_secret_token">Your Secret Token:</string>
    <string name="osm_access_token">Your Access Token:</string>
    <string name="remove_osm_account">Remove Account</string>

</resources>