<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView_osm_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/osm_username"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView_osm_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/osm_password"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword" />

    <CheckBox
        android:id="@+id/checkBox_save_osm_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkbox_save_password" />

    <Button
        android:id="@+id/button_osm_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_osm_login" />

    <Button
        android:id="@+id/button_osm_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_osm_signup" />

</LinearLayout>