<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/button_set_osm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_osm" />

        <Button
            android:id="@+id/button_remove_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remove_osm_account" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView_osm_token"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/osm_token"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView_osm_token_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Medium Text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView_osm_secret_token"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/osm_secret_token"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView_osm_secret_token_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Medium Text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/text_console"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Small Text"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</LinearLayout>