<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="250dip"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/nodeEditTextViewRemoveTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:scaleType="fitXY"
        android:src="@android:drawable/divider_horizontal_dark" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/nodeEditTextViewRemoveMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:padding="3dip"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </RelativeLayout>

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:scaleType="fitXY"
        android:src="@android:drawable/divider_horizontal_dark" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dip" >

        <Button
            android:id="@+id/nodeEditButtonCancelRemove"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/node_edit_cancel" />

        <Button
            android:id="@+id/nodeEditButtonRemoveThis"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/node_edit_remove_this" />

        <Button
            android:id="@+id/nodeEditButtonRemoveAll"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/node_edit_remove_all" />
    </LinearLayout>

</LinearLayout>