<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <MultiAutoCompleteTextView
        android:id="@+id/searchTextfield"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gasStation" >

        <requestFocus />
    </MultiAutoCompleteTextView>

    <Button
        android:id="@+id/button_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start" />

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.40" >

        <ImageButton
            android:id="@+id/button_fav_1"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/plus_sign_small"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="34dp"
            android:layout_marginTop="34dp"
            android:text="@string/add_favorite" />

        <ImageButton
            android:id="@+id/button_fav_2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/plus_sign_small"
            android:layout_alignBaseline="@+id/button_fav_1"
            android:layout_alignBottom="@+id/button_fav_1"
            android:layout_alignParentRight="true"
            android:layout_marginRight="42dp"
            android:text="@string/add_favorite" />

        <ImageButton
            android:id="@+id/button_fav_3"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/plus_sign_small"
            android:layout_alignLeft="@+id/button_fav_1"
            android:layout_below="@+id/button_fav_1"
            android:layout_marginTop="33dp"
            android:text="@string/add_favorite" />

        <ImageButton
            android:id="@+id/button_fav_4"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/plus_sign_small"
            android:layout_alignBaseline="@+id/button_fav_3"
            android:layout_alignBottom="@+id/button_fav_3"
            android:layout_alignLeft="@+id/button_fav_2"
            android:text="@string/add_favorite" />

        <TextView
            android:id="@+id/textView_fav_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/button_fav_2"
            android:layout_alignRight="@+id/button_fav_2"
            android:layout_below="@+id/button_fav_2"
            android:gravity="center_horizontal"
            android:text="@string/add_favorite" />

        <TextView
            android:id="@+id/textView_fav_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/button_fav_3"
            android:layout_alignRight="@+id/button_fav_3"
            android:layout_below="@+id/button_fav_3"
            android:gravity="center_horizontal"
            android:text="@string/add_favorite" />

        <TextView
            android:id="@+id/textView_fav_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/button_fav_4"
            android:layout_alignRight="@+id/button_fav_4"
            android:layout_below="@+id/button_fav_4"
            android:gravity="center_horizontal"
            android:text="@string/add_favorite" />

        <TextView
            android:id="@+id/textView_fav_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/button_fav_1"
            android:layout_alignRight="@+id/button_fav_1"
            android:layout_below="@+id/button_fav_1"
            android:gravity="center_horizontal"
            android:text="@string/add_favorite" />

    </RelativeLayout>

</LinearLayout>